pagetitle styles bug fix and letterspacing added to headers and menu links

--- a/src/styles/base/_page.scss
+++ b/src/styles/base/_page.scss
@@ -24,3 +24,7 @@ body, #___gatsby {
     }
 
 }
+
+h1, h2 {
+    letter-spacing: 1.2px;
+}
