--- a/src/styles/objects/_header.scss
+++ b/src/styles/objects/_header.scss
@@ -16,6 +16,7 @@
       font-size: 18px;
       font-family: 'Roboto', sans-serif;
       font-weight: $regular;
+      letter-spacing: 1.2px;
       color: $black;
       transition: 0.2s;
 
