--- a/src/styles/objects/_post-text-image.scss
+++ b/src/styles/objects/_post-text-image.scss
@@ -3,6 +3,7 @@
 
   .pageTitle {
     padding-top: 95px;
+    padding-left: 20px;
     font-size: 20px;
     font-family: 'Roboto', sans-serif;
     font-weight: $regular;
@@ -15,10 +16,10 @@
     padding-top: 83px;
     justify-content: flex-start;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
 
     h1, h2 {
-      padding: 20px 5px;
+      padding: 20px 20px;
       font-family: 'Roboto', sans-serif;
       font-weight: $bold;
     }
@@ -53,10 +54,9 @@
     }
 
   }
-  
+
   .cv-post-content {
     padding-bottom: 20px;
-    align-items: flex-start;
   }
 
 }
